fix: z-index 3

--- a/src/shared/ui/FiltersSidebar/FiltersSidebar.module.scss
+++ b/src/shared/ui/FiltersSidebar/FiltersSidebar.module.scss
@@ -6,6 +6,7 @@
   padding: 30px;
   box-shadow: -8px 43px 60px -9px #00000040;
   background-color: white;
+  z-index: 100;
 
   .top {
     display: flex;
